--- a/composer.json
+++ b/composer.json
@@ -65,5 +65,8 @@
             "allow-contrib": false,
             "require": "7.2.*"
         }
+    },
+    "require-dev": {
+        "fakerphp/faker": "*"
     }
 }
